--- a/package.json
+++ b/package.json
@@ -15,21 +15,19 @@
     "@fortawesome/react-fontawesome": "^3.1.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
-    "@types/prismjs": "^1.26.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "highlight.js": "^11.11.1",
     "katex": "^0.16.23",
     "lucide-react": "^0.544.0",
-    "prismjs": "^1.30.0",
     "puppeteer-core": "^23.11.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
-    "rehype-highlight": "^7.0.2",
     "rehype-katex": "^7.0.1",
+    "rehype-pretty-code": "^0.14.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
+    "shiki": "^3.13.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
