--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "openchat"
-version = "0.1.0"
-description = "A Tauri App"
+version = "0.4.6"
+description = "OpenChat - A modular, cross-platform LLM chat application"
 authors = ["you"]
 edition = "2021"
 
@@ -22,5 +22,10 @@ tauri = { version = "2.1", features = [] }
 tauri-plugin-opener = "2.1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
+reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "gzip"] }
+headless_chrome = "1.0"
+urlencoding = "2.1"
+tokio = { version = "1", features = ["full"] }
+futures = "0.3"
+chrono = "0.4"
 
