--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,9 +20,10 @@ tauri-build = { version = "2.1", features = [] }
 [dependencies]
 tauri = { version = "2.1", features = [] }
 tauri-plugin-opener = "2.1"
+tauri-plugin-http = "2.1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "gzip"] }
+reqwest = { version = "0.12", features = ["blocking", "rustls-tls-native-roots", "gzip"], default-features = false }
 headless_chrome = "1.0"
 urlencoding = "2.1"
 tokio = { version = "1", features = ["full"] }
