--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "openchat"
-version = "0.4.6"
+version = "0.4.8"
 description = "OpenChat - A modular, cross-platform LLM chat application"
 authors = ["you"]
 edition = "2021"
@@ -21,6 +21,7 @@ tauri-build = { version = "2.1", features = [] }
 tauri = { version = "2.1", features = [] }
 tauri-plugin-opener = "2.1"
 tauri-plugin-http = "2.1"
+tauri-plugin-fs = "2.1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 reqwest = { version = "0.12", features = ["blocking", "rustls-tls-native-roots", "gzip"], default-features = false }
